--- a/HTML_Frontend/financial_statement_test.html
+++ b/HTML_Frontend/financial_statement_test.html
@@ -1,3 +1,4 @@
+<!-- ChatGPT Generated Template -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
   <title>Consolidated Financial Statements</title>
   <style>
     body {
-      font-family: “Times New Roman”, serif;
+      font-family: Arial, Helvetica, sans-serif;
       font-size: 12pt;
       margin: 1in;
       color: #000;
@@ -52,72 +53,141 @@
     <thead>
       <tr>
         <th class="left">Assets</th>
-        <th>Dec 31, 2024</th>
-        <th>Dec 31, 2023</th>
+        <th>Dec 31, 2025</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td class="left">Current assets:</td>
-        <td>12,345</td>
-        <td>10,987</td>
+        <td></td>
       </tr>
       <tr>
-        <td class="left">Cash and cash equivalents</td>
-        <td>5,678</td>
-        <td>4,321</td>
+        <td class="left">Cash</td>
+        <td></td>
       </tr>
       <tr>
-        <td class="left">Accounts receivable, net</td>
-        <td>3,210</td>
-        <td>2,987</td>
+        <td class="left">Accounts receivable</td>
+        <td></td>
       </tr>
       <!-- more rows -->
       <tr>
+        <td class="left">Inventory</td>
+        <td></td>
+      </tr>
+      <tr>
         <td class="left"><strong>Total assets</strong></td>
         <td><strong>XX,XXX</strong></td>
-        <td><strong>YY,YYY</strong></td>
+      </tr>
+    </tbody>
+    <thead>
+      <tr>
+        <th class="left">Liabilities and Owners' Equity</th>
+        <th>Dec 31, 2025</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="left">Accounts payable</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="left">Common stock</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="left">Retained earnings</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="left"><strong>Total iabilities and owners' equity</strong></td>
+        <td><strong>XX,XXX</strong></td>
       </tr>
     </tbody>
   </table>
 
-  <h2>CONSOLIDATED STATEMENTS OF OPERATIONS</h2>
+  <h2>CONSOLIDATED INCOME STATEMENTS</h2>
   <div class="caption">(For the years ended December 31)</div>
 
   <table>
     <thead>
       <tr>
         <th class="left">Revenue</th>
-        <th>2024</th>
-        <th>2023</th>
+        <th>2025</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td class="left">Net sales</td>
-        <td>20,000</td>
-        <td>18,000</td>
+        <td class="left">Sales revenue</td>
+        <td></td>
       </tr>
       <tr>
+        <td class="left">Service revenue</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class ="left">Total revenues</td>
+        <td></td>
+      </tr>
+    <thead>
+      <tr>
+        <th class="left">Expenses</th>
+        <th>2025</th>
+      </tr>
+    </thead>
+      <tr>
         <td class="left">Cost of goods sold</td>
-        <td>12,000</td>
-        <td>11,000</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="left">Rent expense</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="left">Payroll expense</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="left">Supplies expense</td>
+        <td></td>
       </tr>
       <tr>
         <td class="left"><strong>Gross profit</strong></td>
-        <td><strong>8,000</strong></td>
-        <td><strong>7,000</strong></td>
+        <td><strong></strong></td>
       </tr>
       <!-- more rows -->
     </tbody>
   </table>
 
-  <div class="notes">
-    <strong>Notes to Consolidated Financial Statements</strong><br>
-    1. Description of business and summary of significant accounting policies … <br>
-    2. Inventories … <br>
-    3. Property, plant and equipment … <br>
-    <!-- etc. -->
-  </div>
+  <h2>SUPPLIMENTARY FINANCIAL RATIOS</h2>
+  <div class="caption">(For the years ended December 31)</div>
+  <table>
+    <thead>
+    <tr>
+      <th class = "left">
+        Financial Ratios
+      </th>
+      <th>
+        2025
+      </th>
+    </tr>
+  </thead>
+    <tr>
+      <td class = "left">Current Ratio</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td class = "left">Quick Ratio</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td class = "left">Profit Margin</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td class = "left">Debt Ratio</td>
+      <td></td>
+    </tr>
+  </table>
+
 </body>
 </html>
