Backend is speaking to General Ledger

--- a/HTML_Frontend/index.html
+++ b/HTML_Frontend/index.html
@@ -46,8 +46,7 @@
 
         <nav>
             <button onclick="navigate('index')">Home</button>
-            <button onclick="navigate('journal')">General Journal</button>
-            <button onclick="navigate('ledger')">General Ledger</button>
+            <button onclick="window.location.href='/newLedger'">General Ledger</button>
             <button onclick="navigate('statements')">Financial Statement</button>
             <button onclick="navigate('info')">Info</button>
             <button onclick="navigate('help')">Help / Database</button>
