--- a/HTML_Frontend/newLedger.html
+++ b/HTML_Frontend/newLedger.html
@@ -47,6 +47,8 @@
   <aside class="sidebar" aria-label="Accounts sidebar">
     <h2>Accounts</h2>
     <div class="controls">
+      <button class="primary" id="createAccountBtn">+ Add Account</button>
+
     </div>
 
     <div class="account-list" id="accountsList" aria-live="polite"></div>
@@ -111,288 +113,271 @@
 </div>
 
 <script>
-/*
-  Simple in-memory multi-account general ledger template.
-  - accounts: [{id, name, entries: [{date, desc, debit, credit, balance}], openingBalance}]
-  - Running balance is calculated on render (debit increases, credit decreases for asset/expense accounts).
-  - This template keeps things simple: it doesn't enforce account type (Asset/Liability/Equity/Revenue/Expense).
-    If needed, extend account objects with 'type' and adjust sign rules accordingly.
-*/
+/* ==========================================================
+   REAL DATABASE-POWERED LEDGER (connected to Node backend)
+   ========================================================== */
 
-// App state
+// Helper shortcuts
+function $id(id){ return document.getElementById(id); }
+function money(v){ return Number(v).toLocaleString(undefined, {minimumFractionDigits:2}); }
+
+// Frontend state
 let accounts = [];
 let selectedAccountId = null;
-let nextAccountId = 1;
 
-// Helpers
-function $id(id){return document.getElementById(id)}
-function money(v){ return Number(v).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2}); }
-function findAccount(id){ return accounts.find(a => a.id === id) }
+/* ----------------------------------------------------------
+   API CALLS
+   ---------------------------------------------------------- */
 
-// Create a few sample accounts to start
-function seed(){
-  createAccount("Cash");
-  createAccount("Accounts Recievable");
-  createAccount("Inventory");
-  createAccount("Accounts Payable");
-  createAccount("Common Stock");
-  createAccount("Retained Earnings");
-  createAccount("Rent Expense");
-  createAccount("Payroll Expense");
-  createAccount("Supplies Expense");
-  createAccount("Cost of Goods Sold");
-  createAccount("Sales Revenue");
-  createAccount("Service Revenue");
-
-
-  // addEntry(accounts[0].id, "2025-11-01", "Opening balance", 1200, 0);
-  // addEntry(accounts[1].id, "2025-11-01", "Opening balance", 5000, 0);
-  // sample transaction: cash sale
-  // addEntry(accounts[0].id, "2025-11-05", "Cash sale #001", 200, 0);
-  // addEntry(accounts[2].id, "2025-11-05", "Sale recorded", 0, 200);
-  renderAll();
-}
-
-// Account functions
-function createAccount(name, openingBalance = 0){
-  const acc = { id: nextAccountId++, name: name || `Account ${nextAccountId}`, entries: [], openingBalance: Number(openingBalance) || 0 }
-  accounts.push(acc);
-  // if opening balance non-zero, add an opening entry
-  if(acc.openingBalance){
-    acc.entries.push({ date: (new Date()).toISOString().slice(0,10), desc: "Opening balance", debit: acc.openingBalance>0 ? acc.openingBalance : 0, credit: acc.openingBalance<0 ? -acc.openingBalance : 0 });
+// Load all accounts from DB
+async function loadAccounts() {
+  accounts = await fetch("/accounts").then(r => r.json());
+  if (accounts.length > 0 && !selectedAccountId) {
+    selectedAccountId = accounts[0].id;
   }
-  selectedAccountId = acc.id;
   renderAll();
-  return acc;
-}
-function renameAccount(id, newName){
-  const a = findAccount(id); if(!a) return;
-  a.name = newName;
-  renderAll();
-}
-function deleteAccount(id){
-  const idx = accounts.findIndex(a=>a.id===id);
-  if(idx===-1) return false;
-  if(!confirm(`Delete account "${accounts[idx].name}" and all its entries? This cannot be undone.`)) return false;
-  accounts.splice(idx,1);
-  selectedAccountId = accounts.length ? accounts[0].id : null;
-  renderAll();
-  return true;
 }
 
-// Entry functions
-function addEntry(accountId, date, desc, debit, credit){
-  const a = findAccount(accountId);
-  if(!a) return false;
-  debit = Number(debit) || 0; credit = Number(credit) || 0;
-  if(debit && credit){
-    // avoid both being filled for simple entries
-    console.warn("Both debit and credit have values: prefer only one per entry in this simple template.");
-  }
-  a.entries.push({ date: date || (new Date()).toISOString().slice(0,10), desc: desc || "", debit, credit });
-  // keep entries sorted by date ascending (stable)
-  a.entries.sort((x,y)=> x.date.localeCompare(y.date));
-  renderAll();
-  return true;
+// Create account → DB
+async function createAccount(name) {
+  const res = await fetch("/accounts", {
+    method: "POST",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({ name })
+  });
+  return res.json();
 }
 
-// Rendering
-function renderAll(){
+// Rename account → DB
+async function renameAccountRequest(id, newName) {
+  await fetch(`/accounts/${id}`, {
+    method: "PUT",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({ newName })
+  });
+}
+
+// Delete account → DB
+async function deleteAccountRequest(id) {
+  await fetch(`/accounts/${id}`, { method: "DELETE" });
+}
+
+// Load entries for an account
+async function loadEntries(accountId) {
+  return await fetch(`/entries/${accountId}`).then(r => r.json());
+}
+
+// Add entry → DB
+async function addEntryRequest(entry) {
+  const res = await fetch("/entries", {
+    method: "POST",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify(entry)
+  });
+  return res.json();
+}
+
+/* ----------------------------------------------------------
+   FRONTEND RENDERING
+   ---------------------------------------------------------- */
+
+async function renderAll() {
   renderAccountsList();
   renderAccountSelects();
-  renderLedger();
+  await renderLedger();
 }
 
-function renderAccountsList(){
+// Sidebar list of accounts
+function renderAccountsList() {
   const container = $id("accountsList");
   container.innerHTML = "";
-  for(const a of accounts){
+
+  accounts.forEach(a => {
     const div = document.createElement("div");
-    div.className = "account-item" + (a.id === selectedAccountId ? " active": "");
-    div.setAttribute("data-id", a.id);
-    div.onclick = ()=>{ selectedAccountId = a.id; renderAll(); };
+    div.className = "account-item" + (a.id === selectedAccountId ? " active" : "");
+    div.dataset.id = a.id;
+
+    div.onclick = () => {
+      selectedAccountId = a.id;
+      renderAll();
+    };
+
+    let balancePreview = "0.00"; // will update later after entries load
     const left = document.createElement("div");
-    left.style.display = "flex"; left.style.flexDirection = "column";
-    const title = document.createElement("div"); title.textContent = a.name; title.style.fontWeight = 600;
-    const sub = document.createElement("div"); sub.className="small muted"; sub.textContent = `${a.entries.length} entries`;
-    left.appendChild(title); left.appendChild(sub);
+    left.style.display = "flex";
+    left.style.flexDirection = "column";
+
+    const title = document.createElement("div");
+    title.textContent = a.name;
+    title.style.fontWeight = 600;
+
+    const sub = document.createElement("div");
+    sub.className = "small muted";
+    sub.textContent = "Loading...";
+
+    left.appendChild(title);
+    left.appendChild(sub);
+
     const right = document.createElement("div");
-    const bal = calculateRunningBalances(a).slice(-1)[0] || 0;
-    const balEl = document.createElement("div"); balEl.className="small"; balEl.innerHTML = `<span class="bal-pos">${money(bal)}</span>`;
+    const balEl = document.createElement("div");
+    balEl.className = "small";
+    balEl.textContent = balancePreview;
+
     right.appendChild(balEl);
-    div.appendChild(left); div.appendChild(right);
+
+    div.appendChild(left);
+    div.appendChild(right);
+
     container.appendChild(div);
-  }
-  // if empty show placeholder
-  if(accounts.length === 0){
-    container.innerHTML = '<div class="small muted">No accounts yet — create one above.</div>';
-    selectedAccountId = null;
-  }
+
+    // Load entries to calculate preview balance
+    loadEntries(a.id).then(entries => {
+      let bal = 0;
+      entries.forEach(e => bal += (e.debit - e.credit));
+      sub.textContent = `${entries.length} entries`;
+      balEl.innerHTML = `<span class="bal-pos">${money(bal)}</span>`;
+    });
+  });
 }
 
-function renderAccountSelects(){
+function renderAccountSelects() {
   const sel = $id("entryAccountSelect");
   const filter = $id("accountFilter");
-  sel.innerHTML = ""; filter.innerHTML = "";
-  for(const a of accounts){
-    const opt = document.createElement("option"); opt.value = a.id; opt.textContent = a.name; sel.appendChild(opt);
-    const opt2 = opt.cloneNode(true); filter.appendChild(opt2);
-  }
-  // maintain selected account on selects
-  if(selectedAccountId) {
+
+  sel.innerHTML = "";
+  filter.innerHTML = "";
+
+  accounts.forEach(a => {
+    let opt = document.createElement("option");
+    opt.value = a.id;
+    opt.textContent = a.name;
+    sel.appendChild(opt);
+
+    let opt2 = opt.cloneNode(true);
+    filter.appendChild(opt2);
+  });
+
+  if (selectedAccountId) {
     sel.value = selectedAccountId;
     filter.value = selectedAccountId;
   }
 }
 
-function calculateRunningBalances(account){
-  // Returns array of balances after each entry
-  // Simple rule: debit increases balance, credit decreases balance (suitable for Asset/Expense style)
-  let bal = 0;
-  const balances = [];
-  if(account.openingBalance) bal += account.openingBalance;
-  for(const e of account.entries){
-    bal += (Number(e.debit || 0) - Number(e.credit || 0));
-    balances.push(bal);
-  }
-  return balances;
-}
-
-function renderLedger(){
+// Render main ledger
+async function renderLedger() {
   const titleEl = $id("ledgerTitle");
   const subEl = $id("ledgerSubtitle");
   const tbody = $id("ledgerBody");
   tbody.innerHTML = "";
-  if(!selectedAccountId){
+
+  if (!selectedAccountId) {
     titleEl.textContent = "Select an account";
     subEl.textContent = "No account selected";
-    tbody.innerHTML = '<tr><td colspan="5" class="small muted">No account selected</td></tr>';
+    tbody.innerHTML = `<tr><td colspan="5" class="small muted">No account selected</td></tr>`;
     return;
   }
-  const a = findAccount(Number(selectedAccountId));
-  if(!a){
-    tbody.innerHTML = '<tr><td colspan="5" class="small muted">Account not found</td></tr>';
-    return;
-  }
-  titleEl.textContent = a.name;
-  subEl.textContent = `${a.entries.length} entries · Opening: ${money(a.openingBalance || 0)}`;
 
-  // Build rows with running balance
-  let bal = Number(a.openingBalance || 0);
-  if(a.entries.length === 0){
-    tbody.innerHTML = `<tr><td colspan="5" class="small muted">No entries yet for ${a.name} — add one using the form.</td></tr>`;
+  const a = accounts.find(acc => acc.id === selectedAccountId);
+  titleEl.textContent = a.name;
+
+  const entries = await loadEntries(selectedAccountId);
+  subEl.textContent = `${entries.length} entries`;
+
+  if (entries.length === 0) {
+    tbody.innerHTML = `<tr><td colspan="5" class="small muted">No entries yet for ${a.name}</td></tr>`;
     return;
   }
-  for(const e of a.entries){
-    bal += (Number(e.debit || 0) - Number(e.credit || 0));
+
+  let bal = 0;
+  entries.forEach(e => {
+    bal += (e.debit - e.credit);
+
     const tr = document.createElement("tr");
-    const dcell = document.createElement("td"); dcell.textContent = e.date || "";
-    const desc = document.createElement("td"); desc.textContent = e.desc || "";
-    const deb = document.createElement("td"); deb.textContent = e.debit ? money(e.debit) : "";
-    const cred = document.createElement("td"); cred.textContent = e.credit ? money(e.credit) : "";
-    const bcell = document.createElement("td"); bcell.className = "text-right"; bcell.textContent = money(bal);
-    tr.appendChild(dcell); tr.appendChild(desc); tr.appendChild(deb); tr.appendChild(cred); tr.appendChild(bcell);
+    tr.innerHTML = `
+      <td>${e.date}</td>
+      <td>${e.description}</td>
+      <td>${e.debit ? money(e.debit) : ""}</td>
+      <td>${e.credit ? money(e.credit) : ""}</td>
+      <td class="text-right">${money(bal)}</td>
+    `;
     tbody.appendChild(tr);
-  }
+  });
 }
 
-// UI wiring
-/*$id("createAccountBtn").addEventListener("click", ()=>{
-  const name = $id("newAccountName").value.trim();
-  createAccount(name || `Account ${nextAccountId}`);
-  $id("newAccountName").value = "";
-});*/
-$id("renameAccountBtn").addEventListener("click", ()=>{
-  if(!selectedAccountId){ alert("Select an account to rename."); return; }
-  const a = findAccount(Number(selectedAccountId));
+/* ----------------------------------------------------------
+   UI HANDLERS
+   ---------------------------------------------------------- */
+
+// Create new account
+$id("createAccountBtn").onclick = async () => {
+  const name = prompt("Enter new account name:");
+  if (!name || !name.trim()) return;
+
+  await createAccount(name.trim());
+  await loadAccounts();
+};
+
+// Rename account
+$id("renameAccountBtn").onclick = async () => {
+  if (!selectedAccountId) return alert("Select an account first.");
+  const a = accounts.find(acc => acc.id === selectedAccountId);
   const newName = prompt("Rename account:", a.name);
-  if(newName) renameAccount(a.id, newName.trim());
-});
-$id("deleteAccountBtn").addEventListener("click", ()=>{
-  if(!selectedAccountId){ alert("Select an account to delete."); return; }
-  deleteAccount(Number(selectedAccountId));
-});
+  if (newName) {
+    await renameAccountRequest(a.id, newName.trim());
+    await loadAccounts();
+  }
+};
 
-// Toggle add entry form
-$id("addEntryToggle").addEventListener("click", ()=>{
-  const sec = $id("addEntrySection");
-  sec.style.display = sec.style.display === "none" ? "block" : "none";
-});
+// Delete account
+$id("deleteAccountBtn").onclick = async () => {
+  if (!selectedAccountId) return alert("Select an account first.");
+  if (!confirm("Are you sure you want to delete this account?")) return;
+  await deleteAccountRequest(selectedAccountId);
+  selectedAccountId = null;
+  await loadAccounts();
+};
 
-// Save entry
-$id("saveEntryBtn").addEventListener("click", ()=>{
+// Add entry
+$id("saveEntryBtn").onclick = async () => {
   const date = $id("entryDate").value;
   const desc = $id("entryDescription").value.trim();
   const accountId = Number($id("entryAccountSelect").value);
-  const debit = $id("entryDebit").value;
-  const credit = $id("entryCredit").value;
-  if(!accountId){ alert("Choose an account."); return; }
-  if(!date){ alert("Enter date."); return; }
-  if(!desc){ alert("Enter description."); return; }
-  if((!debit || Number(debit)===0) && (!credit || Number(credit)===0)){ alert("Enter an amount in Debit or Credit."); return; }
-  addEntry(accountId, date, desc, debit, credit);
-  // clear form
-  $id("entryDate").value = ""; $id("entryDescription").value = ""; $id("entryDebit").value = ""; $id("entryCredit").value = "";
-});
+  const debit = Number($id("entryDebit").value) || 0;
+  const credit = Number($id("entryCredit").value) || 0;
 
-// Clear entry form
-$id("clearEntryBtn").addEventListener("click", ()=>{
-  $id("entryDate").value = ""; $id("entryDescription").value = ""; $id("entryDebit").value = ""; $id("entryCredit").value = "";
-});
+  if (!accountId) return alert("Choose an account.");
+  if (!date) return alert("Enter date.");
+  if (!desc) return alert("Enter description.");
+  if (debit === 0 && credit === 0) return alert("Enter a debit or credit.");
 
-// Filter select: change which account is shown
-$id("accountFilter").addEventListener("change", (e)=>{
-  const v = Number(e.target.value);
-  if(v) { selectedAccountId = v; renderAll(); }
-});
+  await addEntryRequest({ accountId, date, desc, debit, credit });
 
-// Export CSV for current account
-$id("exportAccountBtn").addEventListener("click", ()=>{
-  if(!selectedAccountId){ alert("Select an account to export."); return; }
-  const a = findAccount(Number(selectedAccountId));
-  downloadCSV(ledgerToCSV(a), `${a.name.replace(/\s+/g,'_')}_ledger.csv`);
-});
-$id("exportAllBtn").addEventListener("click", ()=>{
-  // join all account CSVs into one zip-like string separated by markers (simple approach)
-  if(accounts.length===0){ alert("No accounts to export."); return; }
-  let combined = "";
-  accounts.forEach(a=>{
-    combined += `-- ACCOUNT: ${a.name} --\n`;
-    combined += ledgerToCSV(a);
-    combined += "\n\n";
-  });
-  downloadCSV(combined, `all_accounts_ledger.txt`); // text file with multiple sections
-});
+  $id("entryDate").value = "";
+  $id("entryDescription").value = "";
+  $id("entryDebit").value = "";
+  $id("entryCredit").value = "";
 
-// Utilities for CSV download
-function ledgerToCSV(account){
-  const rows = [["Date","Description","Debit","Credit","Running Balance"]];
-  let bal = Number(account.openingBalance || 0);
-  for(const e of account.entries){
-    bal += (Number(e.debit || 0) - Number(e.credit || 0));
-    rows.push([e.date || "", e.desc || "", e.debit ? Number(e.debit).toFixed(2) : "", e.credit ? Number(e.credit).toFixed(2) : "", bal.toFixed(2)]);
-  }
-  return rows.map(r => r.map(cell => `"${String(cell).replace(/"/g,'""')}"`).join(",")).join("\n");
-}
-function downloadCSV(text, filename){
-  const blob = new Blob([text], {type: "text/csv;charset=utf-8;"});
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement("a");
-  a.href = url; a.download = filename; a.style.display = "none";
-  document.body.appendChild(a); a.click();
-  document.body.removeChild(a); URL.revokeObjectURL(url);
-}
+  await renderAll();
+};
 
-// Save selected account when clicking list (delegated)
-document.getElementById("accountsList").addEventListener("click", (e)=>{
-  const el = e.target.closest(".account-item");
-  if(!el) return;
-  const id = Number(el.dataset.id);
-  if(id){ selectedAccountId = id; renderAll(); }
-});
+// Filter accounts
+$id("accountFilter").onchange = e => {
+  selectedAccountId = Number(e.target.value);
+  renderAll();
+};
 
-// start
-seed();
+// Toggle entry form
+$id("addEntryToggle").onclick = () => {
+  const sec = $id("addEntrySection");
+  sec.style.display = sec.style.display === "none" ? "block" : "none";
+};
+
+
+/* ----------------------------------------------------------
+   INITIAL LOAD
+   ---------------------------------------------------------- */
+loadAccounts();
 </script>
+
 </body>
 </html>
