--- a/HTML_Frontend/signup.html
+++ b/HTML_Frontend/signup.html
@@ -2,7 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -171,28 +170,27 @@
                 headers: {
                     "Content-Type": "application/json"
                 },
-                body: JSON.stringify({
-                    username, email, password
-                })
+                body: JSON.stringify({ username, email, password})
             })
             .then(async (res)=>{
-                const text = await res.text();
-                if(!res.ok){
+                const data = await res.json();
+                if(!res.ok || !data.success){
                     message.style.color = 'red';
-                    message.textContent = text;
+                    message.textContent = data.message || 'Signup failed.';
                 } else {
                     message.style.color = 'green';
-                    message.textContent = text;
+                    message.textContent = data.message;
+                    // Redirect to index.html after 1 second
+                    setTimeout(() => {
+                        window.location.href = '/index.html';
+                    }, 1000);
                 }
             })
             .catch(err => {
-                console.error(err);
+                console.error("Fetch error:", err);
                 message.style.color = 'red';
-                message.textContent = 'An error occurred during signup.';
+                message.textContent = 'An error occurred during signup: ' + err.message;
             });
-
-            message.style.color = 'green';
-            message.textContent = 'Signup successful!';
         });
 
         document.getElementById('password').addEventListener('focus', function () {
