signin and signup work together

--- a/HTML_Frontend/signup.html
+++ b/HTML_Frontend/signup.html
@@ -135,6 +135,12 @@
             </div>
             <button type="submit">Signup</button>
         </form>
+
+        <p style="text-align:center; margin-top:10px; font-size:0.9em;">
+            Already have an account with us? <a href="signin.html">Click here</a>
+        </p>
+
+
         <p id="message"></p>
     </div>
     <script>
