--- a/HTML_Frontend/index.html
+++ b/HTML_Frontend/index.html
@@ -48,7 +48,7 @@
             <button onclick="navigate('index')">Home</button>
             <button onclick="window.location.href='/newLedger'">General Ledger</button>
             <button onclick="navigate('statements')">Financial Statement</button>
-            <button onclick="navigate('info')">Info</button>
+            <!-- <button onclick="navigate('info')">Info</button> -->
             <button onclick="navigate('help')">Help / Database</button>
         </nav>
 
