--- a/HTML_Frontend/financial_statement_test.html
+++ b/HTML_Frontend/financial_statement_test.html
@@ -63,20 +63,20 @@
       </tr>
       <tr>
         <td class="left">Cash</td>
-        <td></td>
+        <td id="Cash"></td>
       </tr>
       <tr>
         <td class="left">Accounts receivable</td>
-        <td></td>
+        <td id="Accounts Receivable"></td>
       </tr>
       <!-- more rows -->
       <tr>
         <td class="left">Inventory</td>
-        <td></td>
+        <td id="Inventory"></td>
       </tr>
       <tr>
         <td class="left"><strong>Total assets</strong></td>
-        <td><strong>XX,XXX</strong></td>
+        <td><strong id="Total Assets"></strong></td>
       </tr>
     </tbody>
     <thead>
@@ -88,19 +88,19 @@
     <tbody>
       <tr>
         <td class="left">Accounts payable</td>
-        <td></td>
+        <td id="Accounts Payable"></td>
       </tr>
       <tr>
         <td class="left">Common stock</td>
-        <td></td>
+        <td id="Common Stock"></td>
       </tr>
       <tr>
         <td class="left">Retained earnings</td>
-        <td></td>
+        <td id="Retained Earnings"></td>
       </tr>
       <tr>
-        <td class="left"><strong>Total iabilities and owners' equity</strong></td>
-        <td><strong>XX,XXX</strong></td>
+        <td class="left"><strong>Total liabilities and owners' equity</strong></td>
+        <td><strong id="Total Liabilities Equity"></strong></td>
       </tr>
     </tbody>
   </table>
@@ -118,15 +118,15 @@
     <tbody>
       <tr>
         <td class="left">Sales revenue</td>
-        <td></td>
+        <td id="Sales Revenue"></td>
       </tr>
       <tr>
         <td class="left">Service revenue</td>
-        <td></td>
+        <td id="Service Revenue"></td>
       </tr>
       <tr>
         <td class ="left">Total revenues</td>
-        <td></td>
+        <td id="Total Revenues"></td>
       </tr>
     <thead>
       <tr>
@@ -136,23 +136,23 @@
     </thead>
       <tr>
         <td class="left">Cost of goods sold</td>
-        <td></td>
+        <td id="Cost of Goods Sold"></td>
       </tr>
       <tr>
         <td class="left">Rent expense</td>
-        <td></td>
+        <td id="Rent Expense"></td>
       </tr>
       <tr>
         <td class="left">Payroll expense</td>
-        <td></td>
+        <td id="Payroll Expense"></td>
       </tr>
       <tr>
         <td class="left">Supplies expense</td>
-        <td></td>
+        <td id="Supplies Expense"></td>
       </tr>
       <tr>
         <td class="left"><strong>Gross profit</strong></td>
-        <td><strong></strong></td>
+        <td><strong id="Gross Profit"></strong></td>
       </tr>
       <!-- more rows -->
     </tbody>
@@ -188,6 +188,109 @@
       <td></td>
     </tr>
   </table>
+
+  <script>
+  // Map account names to their IDs
+  const accountMap = {};
+
+  // Fetch all accounts and build a map
+  async function loadAllAccounts() {
+    try {
+      const res = await fetch("/accounts");
+      const accounts = await res.json();
+      accounts.forEach(acc => {
+        accountMap[acc.name] = acc.id;
+      });
+      console.log("Loaded accounts:", accountMap);
+    } catch (err) {
+      console.error("Error loading accounts:", err);
+    }
+  }
+
+  // Fetch entries for an account and calculate balance
+  async function loadBalance(accountName) {
+    try {
+      const accountId = accountMap[accountName];
+      if (!accountId) {
+        console.warn("Account not found:", accountName);
+        return 0;
+      }
+
+      const res = await fetch(`/entries/${accountId}`);
+      const entries = await res.json();
+
+      // Sum debits and credits
+      const totalDebit = entries.reduce((sum, e) => sum + (e.debit || 0), 0);
+      const totalCredit = entries.reduce((sum, e) => sum + (e.credit || 0), 0);
+      const balance = totalDebit - totalCredit;
+
+      // Display in the corresponding cell
+      const cell = document.getElementById(accountName);
+      if (cell) {
+        cell.textContent = Number(balance).toLocaleString("en-US", {
+          minimumFractionDigits: 2,
+          maximumFractionDigits: 2
+        });
+      }
+
+      return balance;
+    } catch (err) {
+      console.error("Error loading balance for", accountName, err);
+      return 0;
+    }
+  }
+
+  // Format a number for display
+  function formatNumber(num) {
+    return Number(num).toLocaleString("en-US", {
+      minimumFractionDigits: 2,
+      maximumFractionDigits: 2
+    });
+  }
+
+  // Initialize on page load
+  async function init() {
+    await loadAllAccounts();
+
+    // Load individual account balances
+    const displayAccounts = [
+      "Cash",
+      "Accounts Receivable",
+      "Inventory",
+      "Accounts Payable",
+      "Common Stock",
+      "Retained Earnings",
+      "Rent Expense",
+      "Payroll Expense",
+      "Supplies Expense",
+      "Cost of Goods Sold",
+      "Sales Revenue",
+      "Service Revenue"
+    ];
+
+    const balances = {};
+    for (const name of displayAccounts) {
+      balances[name] = await loadBalance(name);
+    }
+
+    // Calculate and display totals
+    const totalAssets = (balances["Cash"] || 0) + (balances["Accounts Receivable"] || 0) + (balances["Inventory"] || 0);
+    document.getElementById("Total Assets").textContent = formatNumber(totalAssets);
+
+    const totalLiabilities = (balances["Accounts Payable"] || 0) + (balances["Common Stock"] || 0) + (balances["Retained Earnings"] || 0);
+    document.getElementById("Total Liabilities Equity").textContent = formatNumber(totalLiabilities);
+
+    const totalRevenues = (balances["Sales Revenue"] || 0) + (balances["Service Revenue"] || 0);
+    document.getElementById("Total Revenues").textContent = formatNumber(totalRevenues);
+
+    const totalExpenses = (balances["Cost of Goods Sold"] || 0) + (balances["Rent Expense"] || 0) + (balances["Payroll Expense"] || 0) + (balances["Supplies Expense"] || 0);
+    const grossProfit = totalRevenues - totalExpenses;
+    document.getElementById("Gross Profit").textContent = formatNumber(grossProfit);
+  }
+
+  // Run on page load
+  document.addEventListener("DOMContentLoaded", init);
+  </script>
 
 </body>
 </html>
