--- a/HTML_Frontend/index.html
+++ b/HTML_Frontend/index.html
@@ -53,7 +53,7 @@
         </nav>
 
         <p style="margin-top: 20px;">
-            Pleade select an option
+            Please select an option
         </p>
     </body>
 </html>
