Trying to add the accounts to the user

--- a/HTML_Frontend/financial_statement_test.html
+++ b/HTML_Frontend/financial_statement_test.html
@@ -124,7 +124,7 @@
         <td id="Service Revenue"></td>
       </tr>
       <tr>
-        <td class ="left">Total revenues</td>
+        <td class ="left"><strong>Total revenues</strong></td>
         <td id="Total Revenues"></td>
       </tr>
     <thead>
