THE BUG HAS BEEN FIXED

--- a/HTML_Frontend/index.html
+++ b/HTML_Frontend/index.html
@@ -45,7 +45,7 @@
         </header>
 
         <nav>
-            <button onclick="navigate('index')">Home</button>
+            <button onclick="navigate('signin')">Signout</button>
             <button onclick="window.location.href='/newLedger'">General Ledger</button>
             <button onclick="navigate('statements')">Financial Statement</button>
             <!-- <button onclick="navigate('info')">Info</button> -->
