FIxed all the links and changed folder structure

--- a/HTML_Frontend/help/index.html
+++ b/HTML_Frontend/help/index.html
@@ -87,8 +87,8 @@ li {
 <body>
 
   <!-- Image in top-left corner - linked to index.html -->
-  <a href="index.html">
-    <img src="SWElogo.jpeg" alt="Logo" class="image">
+  <a href="../index.html">
+    <img src="../SWElogo.jpeg" alt="Logo" class="image">
   </a>
 
 
