--- a/HTML_Frontend/index.html
+++ b/HTML_Frontend/index.html
@@ -40,16 +40,16 @@
 
     <body>
         <header>
-            <img src="SWElogo.jpeg" alt ="JNJB Logo">
+            <img src="../SWElogo.jpeg" alt ="JNJB Logo">
             <h1>Welcome to JNJB Personalized Bookkeeping Service</h1>
         </header>
 
         <nav>
-            <button onclick="navigate('signin')">Signout</button>
-            <button onclick="window.location.href='/newLedger'">General Ledger</button>
-            <button onclick="navigate('statements')">Financial Statement</button>
+            <button onclick="navigate('signIn/signin')">Signout</button>
+            <button onclick="navigate('newLedger/index')">General Ledger</button>
+            <button onclick="navigate('statements/index')">Financial Statement</button>
             <!-- <button onclick="navigate('info')">Info</button> -->
-            <button onclick="navigate('help')">Help / Database</button>
+            <button onclick="navigate('help/index')">Help / Database</button>
         </nav>
 
         <p style="margin-top: 20px;">
