--- a/HTML_Frontend/newLedger/index.html
+++ b/HTML_Frontend/newLedger/index.html
@@ -67,7 +67,7 @@ header img {
   <aside class="sidebar" aria-label="Accounts sidebar">
     <h2>Accounts</h2>
     <div class="controls">
-      <button class="primary" onclick="navigate('index.html')">Home</button>
+      <button class="primary" onclick="navigate('../index.html')">Home</button>
       <button class="primary" id="createAccountBtn">+ Add Account</button>
 
     </div>
