--- a/HTML_Frontend/signIn/signup.html
+++ b/HTML_Frontend/signIn/signup.html
@@ -188,7 +188,7 @@
                     message.textContent = data.message;
                     // Redirect to index.html after 1 second
                     setTimeout(() => {
-                        window.location.href = '/index.html';
+                        window.location.href = '../index.html';
                     }, 1000);
                 }
             })
