--- a/HTML_Frontend/statements/index.html
+++ b/HTML_Frontend/statements/index.html
@@ -122,8 +122,8 @@ header img {
   
 
   <header>
-            <img src="SWElogo.jpeg" alt ="JNJB Logo">
-            <button class="primary" onclick="navigate('index.html')">Home</button>
+            <img src="../SWElogo.jpeg" alt ="JNJB Logo">
+            <button class="primary" onclick="navigate('../index.html')">Home</button>
         </header>
 
   <h2>CONSOLIDATED BALANCE SHEETS</h2>
