--- a/HTML_Frontend/infographics/index.html
+++ b/HTML_Frontend/infographics/index.html
@@ -16,7 +16,7 @@ body, h1, h2, h3, p, li {
 </head>
 <body>
   <header>
-    <img src="SWElogo.jpeg" alt ="JNJB Logo" style="height: 100px;">
+    <img src="../SWElogo.jpeg" alt ="JNJB Logo" style="height: 100px;">
     <h1 style="text-align: center; color: #1b5e20; margin-top: 10px;">Infographics Section - Coming Soon!</h1>
     
   </header>
